--- a/provisioning/bootstrap/debian-zfs-root-part1.yml
+++ b/provisioning/bootstrap/debian-zfs-root-part1.yml
@@ -1,14 +1,8 @@
 ---
-- hosts: storage-servers
+- hosts: bootstrap
   become: true
   collections:
     - community.general.zfs
-  vars:
-    system_hostname: kilotwo
-    zpool_type: mirror
-    zpool_disk_identifiers:
-      - scsi-0QEMU_QEMU_HARDDISK_drive-scsi0
-      - scsi-0QEMU_QEMU_HARDDISK_drive-scsi1
   tasks:
     - stat:
         path: "/usr/local/sbin/chroot_{{ inventory_hostname_short }}"
@@ -40,19 +34,26 @@
         name: zfsutils-linux
         state: present
 
-    - shell: "sgdisk -a1 -n1:24K:+1000K -t1:EF02 /dev/disk/by-id/{{ item }}"
+    - shell: "sgdisk -a1 -n1:24K:+1000K -t1:EF02 {{ item }}"
       args:
-        creates: "/dev/disk/by-id/{{ item }}-part1"
+        creates: "{{ item }}-part1"
+      loop: "{{ zpool_disk_identifiers }}"
+      when: system_boot_type == 'bios'
+
+    - shell: "sgdisk -n2:1M:+512M -t2:EF00 {{ item }}"
+      args:
+        creates: "{{ item }}-part1"
+      loop: "{{ zpool_disk_identifiers }}"
+      when: system_boot_type == 'uefi'
+
+    - shell: "sgdisk -n3:0:+1G -t3:BF01 {{ item }}"
+      args:
+        creates: "{{ item }}-part3"
       loop: "{{ zpool_disk_identifiers }}"
 
-    - shell: "sgdisk -n3:0:+1G -t3:BF01 /dev/disk/by-id/{{ item }}"
+    - shell: "sgdisk -n4:0:0 -t4:BF00 {{ item }}"
       args:
-        creates: "/dev/disk/by-id/{{ item }}-part3"
-      loop: "{{ zpool_disk_identifiers }}"
-
-    - shell: "sgdisk -n4:0:0 -t4:BF00 /dev/disk/by-id/{{ item }}"
-      args:
-        creates: "/dev/disk/by-id/{{ item }}-part4"
+        creates: "{{ item }}-part4"
       loop: "{{ zpool_disk_identifiers }}"
 
     - shell: zpool status bpool
@@ -80,7 +81,7 @@
         -O devices=off -O normalization=formD -O relatime=on -O xattr=sa
         -O mountpoint=/boot -R /mnt
         bpool{{ ' ' ~ zpool_type if zpool_type != 'single' }}
-        {{ ((['/dev/disk/by-id/'] | product(zpool_disk_identifiers) | map('join') | list) | product(['-part3']) | map('join') | list) | join(' ') }}
+        {{ zpool_disk_identifiers | product(['-part3']) | map('join') | list | join(' ') }}
       when: bpool_status.rc == 1 #'
 
     - shell: zpool status rpool
@@ -91,29 +92,31 @@
         prompt: Enter passphrase to encrypt rpool with
         echo: no
       register: rpool_passphrase
-      when: rpool_status.rc == 1
+      when: zpool_encrypt_root and rpool_status.rc == 1
 
     - pause:
         prompt: Confirm passphrase
         echo: no
       register: rpool_passphrase_confirm
-      when: rpool_status.rc == 1
+      when: zpool_encrypt_root and rpool_status.rc == 1
 
     - fail:
         msg: Passphrases do not match!
-      when: rpool_status.rc == 1 and (rpool_passphrase.user_input != rpool_passphrase_confirm.user_input)
+      when: zpool_encrypt_root and rpool_status.rc == 1 and (rpool_passphrase.user_input != rpool_passphrase_confirm.user_input)
 
     - name: Create the root pool
       shell: >-
-        echo "{{ rpool_passphrase.user_input }}" | zpool create
+        {% if zpool_encrypt_root %}echo "{{ rpool_passphrase.user_input }}" | {% endif %}zpool create
         -o ashift=12
+        {% if zpool_encrypt_root %}
         -O encryption=aes-256-gcm
         -O keylocation=prompt -O keyformat=passphrase
+        {% endif %}
         -O acltype=posixacl -O canmount=off -O compression=lz4
         -O dnodesize=auto -O relatime=on
         -O xattr=sa -O mountpoint=/ -R /mnt
         rpool{{ ' ' ~ zpool_type if zpool_type != 'single' }}
-        {{ ((['/dev/disk/by-id/'] | product(zpool_disk_identifiers) | map('join') | list) | product(['-part4']) | map('join') | list) | join(' ') }}
+        {{ zpool_disk_identifiers | product(['-part4']) | map('join') | list | join(' ') }}
       when: rpool_status.rc == 1 #'
 
     - name: Create ZFS container datasets
@@ -225,6 +228,9 @@
         dest: /mnt/etc/zfs/
         remote_src: true
 
+    # @TODO properly set hostname with fqdqn
+    # https://unix.stackexchange.com/questions/322883/how-to-correctly-set-hostname-and-domain-name
+
     - name: Set the system hostname
       copy:
         content: "{{ system_hostname }}\n"
@@ -235,6 +241,7 @@
         path: /etc/hosts
         line: "127.0.1.1       {{ system_hostname }}"
 
+    # @TODO make networking configurable when i add the iscsi stuff
     - name: Configure networking
       copy:
         content: |
