--- a/provisioning/group_vars/all.yml
+++ b/provisioning/group_vars/all.yml
@@ -1,4 +1,5 @@
 ---
 ansible_user: ansible
+# @TODO if we have to execute from bootstrap/ then we need to use a different variable other than playbook_dir here, cus it looks in the wrong spot.
 ansible_ssh_private_key_file: "{{ playbook_dir }}/host_keys/id_rsa.ansible@addeo.net"
 ansible_python_interpreter: /usr/bin/python3
