--- a/provisioning/bootstrap/debian-zfs-root-part2.yml
+++ b/provisioning/bootstrap/debian-zfs-root-part2.yml
@@ -137,6 +137,7 @@
         state: present
       when: system_boot_type == 'uefi'
 
+    # @TODO this isn't idempotent and causes a failure
     - shell: "mkdosfs -F 32 -s 1 -n EFI {{ zpool_disk_identifiers | first }}-part2"
       when: system_boot_type == 'uefi'
 
@@ -154,6 +155,7 @@
         line: "/dev/disk/by-uuid/{{ blkid.stdout }} /boot/efi vfat defaults 0 0"
       when: system_boot_type == 'uefi'
 
+    # @TODO this isn't idempotent and causes a failure
     - shell: mount /boot/efi
       when: system_boot_type == 'uefi'
 
@@ -203,7 +205,7 @@
         enabled: true
 
     - apt:
-        package: open-scsi
+        package: open-iscsi
         state: present
       when: iscsi_boot == true
 
@@ -228,7 +230,7 @@
           iscsi_target_ip={{ iscsi_target_ip }}
           iscsi_target_port={{ iscsi_target_port }}
           root=ZFS=rpool/root/debian
-          ip={{ iscsi_initiator_ip }}:{{ iscsi_target_ip }}:255.255.255.0:{{ systyem_hostname }}:{{ iscsi_interface_name }}:off"
+          ip={{ iscsi_initiator_ip }}:{{ iscsi_target_ip }}::255.255.255.0:{{ system_hostname }}:{{ iscsi_interface_name }}:off"
       when: iscsi_boot == true
 
     - file:
