--- a/provisioning/group_vars/bootstrap.yml
+++ b/provisioning/group_vars/bootstrap.yml
@@ -5,6 +5,7 @@ system_fqdn: ~
 system_users:
   - name: ansible
     groups: sudo
+    ssh_public_key_file: "{{ ansible_ssh_private_key_file }}.pub"
   - name: marc
     groups: sudo
 system_users_default_password: changeme
