Add ntp to servers

--- a/provisioning/requirements.yml
+++ b/provisioning/requirements.yml
@@ -3,3 +3,7 @@ collections:
   - name: community.general
     version: 3.7.0
     source: https://galaxy.ansible.com
+
+roles:
+  - name: geerlingguy.ntp
+    version: 2.3.0
