Add DELL OMSA role

--- a/provisioning/host_vars/cantilever.addeo.net.yml
+++ b/provisioning/host_vars/cantilever.addeo.net.yml
@@ -13,3 +13,6 @@ zpool_encrypt_root: false
 zpool_type: single
 zpool_disk_identifiers:
   - /dev/disk/by-path/ip-172.1.0.15:3260-iscsi-iqn.iscsi-test.addeo.net:lun1-lun-1
+
+# DELL OMSA Configuration.
+install_dell_omsa: true
