--- a/provisioning/host_vars/cantilever.addeo.net.yml
+++ b/provisioning/host_vars/cantilever.addeo.net.yml
@@ -1,5 +1,5 @@
 ---
-# Bootstrap configuration.
+# Bootstrap Configuration.
 system_boot_type: uefi
 system_hostname: cantilever
 system_fqdn: cantilever.addeo.net
