--- a/provisioning/host_vars/testbed.addeo.net.yml
+++ b/provisioning/host_vars/testbed.addeo.net.yml
@@ -1,5 +1,5 @@
 ---
-# Bootstrap configuration.
+# Bootstrap Configuration.
 system_hostname: testbed
 system_users:
   - name: ansible
@@ -7,13 +7,13 @@ system_users:
     groups: sudo
     ssh_public_key_file: "{{ ansible_ssh_private_key_file }}.pub"
 
-# DELL OMSA configuration.
+# DELL OMSA Configuration.
 install_dell_omsa: true
 
-# Plymouth configuration.
+# Plymouth Configuration.
 install_plymouth: true
 plymouth_grub_gfxmode: 1024x768
 plymouth_theme: brogit-plymouth-theme
 
-# Shavee configuration.
+# Shavee Configuration.
 install_shavee: true
