Move some variables into servers group_vars

--- a/provisioning/group_vars/servers.yml
+++ b/provisioning/group_vars/servers.yml
@@ -1,4 +1,16 @@
 ---
+# Bootstrap Configuration.
+system_users:
+  - name: ansible
+    password: changeme # @TODO encrypt
+    groups: sudo
+    ssh_public_key_file: "{{ ansible_ssh_private_key_file }}.pub"
+
+# Plymouth Configuration.
+install_plymouth: true
+plymouth_grub_gfxmode: 1024x768
+plymouth_theme: brogit-plymouth-theme
+
 # SSH Hardening Configuration.
 sftp_enabled: true
 
