--- a/provisioning/host_vars/testbed.addeo.net.yml
+++ b/provisioning/host_vars/testbed.addeo.net.yml
@@ -1,6 +1,6 @@
 ---
 # Bootstrap Configuration.
-system_hostname: testbed
+bootstrap_hostname: testbed
 
 # DELL OMSA Configuration.
 install_dell_omsa: true
